--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     "db:introspect": "drizzle-kit introspect:pg --config=drizzle.config.ts"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/platform-express": "^10.3.10",
+    "axios": "^1.7.2",
     "drizzle-orm": "^0.32.0",
+    "multer": "1.4.5-lts.1",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.12.0",
     "postgres": "^3.4.4",
     "reflect-metadata": "^0.1.13",
@@ -39,6 +44,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/pg": "^8.11.6",
     "@types/supertest": "^2.0.12",
